# swertres-django

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
conf/: wsgi.py
conf/settings/: defaults.py  local.py.tpl
core/: models.py  urls.py  utils.py
core/templatetags/: admin_reorder.py
frontend/templates/admin/: base_site.html
